fix: overflow on long searches

--- a/components/Find.css
+++ b/components/Find.css
@@ -1,7 +1,6 @@
 .highlight {
   padding: 1px 0px;
   display: inline-block;
-  white-space: pre;
 }
 
 .red {
